2008-09-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Remove unused BSP_INIT_STACK_SIZE.

2008-09-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, include/bsp.h, startup/bspstart.c, startup/linkcmds: Use
	PowerPC level shared bsp_get_work_area() implementation.
	* startup/bspgetworkarea.c: Removed.

2008-09-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Remove unnecessary boilerplate comments.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, startup/bspstart.c: Add use of bsp_get_work_area() in
	its own file and rely on BSP Framework to perform more
	initialization. Remove unnecessary includes of rtems/libio.h and
	rtems/libcsupport.h.
	* startup/bspgetworkarea.c: New file.

2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Review of all bsp_cleanup() implementations. In this
	phase, all prototypes were removed from bsp.h and empty
	implementations were removed and made to use the shared stub.

2008-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shmsupp/lock.c: Disable CPU interrupts when we have the shared memory
	locked. This is necessary to prevent deadlock.

2008-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, preinstall.am, shmsupp/getcfg.c, shmsupp/lock.c,
	startup/linkcmds: Now running mptests using new memory layout with
	updates patches against gdb 6.8.
	* include/psim.h, startup/psim_registers.c: New files.

2008-08-29	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Remove another duplicate reference.

2008-08-29	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Remove duplicate reference.

2008-08-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* irq/irq_init.c: Fix warnings.

2008-07-24	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* startup/bspstart.c: Changed bsp_get_workarea() to
	bsp_get_work_area() and added support for an optional separate heap
	area.

2008-07-18	Joel Sherrill <joel.sherrill@oarcorp.com>
