@@ -1,3 +1,10 @@
+2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile.am, start/start.S: bsp_cleanup() had the same code which was
+	executed when you returned from boot_card() to start.S. So just use
+	the stub bsp_cleanup() implementation and remove a file.
+	* startup/bspclean.c: Removed.
+
 2008-09-19	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* include/bsp.h: Remove unused BSP_INIT_STACK_SIZE.
